--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/construct.html"><strong aria-hidden="true">1.1.</strong> 构建</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.2.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> 求解器</div></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">4.</strong> 术语表</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/run_length.html"><strong aria-hidden="true">1.1.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="level/construct.html"><strong aria-hidden="true">1.2.</strong> 构建</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> 求解器</div></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">4.</strong> 术语表</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -295,25 +295,7 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 </code></pre>
 <p>将地图从关卡中拆分是因为地图涉及大量的关联函数, 如果都放在 <code>Level</code> 里会导致其变得过于庞大.<br />
 为了提升代码的可读性和可维护性, 将相关代码拆分到 <code>Map</code> 中, 并将 <code>Level</code> 的 Deref 操作指向 <code>Map</code>. 并通过实现 <a href="https://doc.rust-lang.org/std/ops/trait.Deref.html">Deref trait</a>, 使得用户能够透明地引用到 <code>Level</code> 内部的 Map.</p>
-<h2 id="行程编码run-length-encoding"><a class="header" href="#行程编码run-length-encoding">行程编码(Run-length encoding)</a></h2>
-<p><a href="https://en.wikipedia.org/wiki/Run-length_encoding">行程编码</a>(run-length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
-<pre><code class="language-txt">###
-#.###
-#*$ #
-# @ #
-#####
-</code></pre>
-<p>经 RLE 编码后可得:</p>
-<pre><code class="language-txt">3#
-#.3#
-#*$-#
-#--@#
-5#
-</code></pre>
-<p>可以看出, 虽然编码后的关卡有更小的体积, 但不再能直观地看出关卡的结构.</p>
-<p>RLE 编码后的关卡通常还会使用 <code>|</code> 来分割行, 而非 <code>\n</code>. 使其看上去更加紧凑:</p>
-<pre><code class="language-txt">3#|#.3#|#*$-#|#--@#|5#
-</code></pre>
+<p>关卡可能通过行程编码压缩, 详情请参见<a href="level/run_length.html">行程编码</a>.</p>
 <h2 id="特殊关卡"><a class="header" href="#特殊关卡">特殊关卡</a></h2>
 <h3 id="玩家不可达区域存在箱子"><a class="header" href="#玩家不可达区域存在箱子">玩家不可达区域存在箱子</a></h3>
 <p><img src="level/../assets/sasquatch_41.png" alt="Sasquatch #41" /></p>
@@ -366,6 +348,92 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 <ul>
 <li><a href="http://sokobano.de/wiki/index.php?title=Level_format">http://sokobano.de/wiki/index.php?title=Level_format</a></li>
 </ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="行程编码run-length-encoding"><a class="header" href="#行程编码run-length-encoding">行程编码(Run-length encoding)</a></h1>
+<p><a href="https://en.wikipedia.org/wiki/Run-length_encoding">行程编码</a>(run-length encoding, RLE)经常被用于压缩推箱子的关卡和解决方案.</p>
+<pre><code class="language-txt">###
+#.###
+#*$ #
+# @ #
+#####
+</code></pre>
+<p>经 RLE 编码后可得:</p>
+<pre><code class="language-txt">3#
+#.3#
+#*$-#
+#--@#
+5#
+</code></pre>
+<p>可以看出, 虽然编码后的关卡有更小的体积, 但不再能直观地看出关卡的结构.</p>
+<p>RLE 编码后的关卡通常还会使用 <code>|</code> 来分割行, 而非 <code>\n</code>. 使其看上去更加紧凑:</p>
+<pre><code class="language-txt">3#|#.3#|#*$-#|#--@#|5#
+</code></pre>
+<h2 id="编码"><a class="header" href="#编码">编码</a></h2>
+<p>下面是一个简单的 RLE 编码函数的实现:</p>
+<pre><code class="language-rs">pub fn rle_encode(str: &amp;str) -&gt; Result&lt;String, EncodeRleError&gt; {
+    let mut result = String::new();
+    let mut chars = str.chars().peekable();
+    let mut count = 0;
+    while let Some(char) = chars.next() {
+        if char.is_numeric() {
+            return Err(EncodeRleError::InvalidCharacter(char));
+        }
+        count += 1;
+        if chars.peek() != Some(&amp;char) {
+            if count &gt; 1 {
+                result.push_str(&amp;count.to_string());
+            }
+            result.push(char);
+            count = 0;
+        }
+    }
+    Ok(result)
+}
+</code></pre>
+<p>该方法不会使用括号包裹重复的相连字串以提高压缩率.</p>
+<h2 id="解码"><a class="header" href="#解码">解码</a></h2>
+<p>下面是一个 RLE 解码函数的实现:</p>
+<pre><code class="language-rs">pub fn rle_decode(str: &amp;str) -&gt; Result&lt;String, DecodeRleError&gt; {
+    let mut result = String::new();
+
+    let mut length_string = String::new();
+    let mut iter = str.chars();
+    while let Some(char) = iter.next() {
+        if char.is_ascii_digit() {
+            length_string.push(char);
+            continue;
+        }
+        let mut token = String::new();
+        if char == '(' {
+            let mut nesting_level = 0;
+            for char in &amp;mut iter {
+                if char == '(' {
+                    nesting_level += 1;
+                } else if char == ')' {
+                    if nesting_level == 0 {
+                        break;
+                    }
+                    nesting_level -= 1;
+                }
+                token.push(char);
+            }
+        } else {
+            token = char.to_string();
+        }
+        let length = length_string.parse().unwrap_or(1);
+        result += &amp;token.repeat(length);
+        length_string.clear();
+    }
+    if !length_string.is_empty() {
+        return Err(DecodeRleError::EndWithDigits(
+            length_string.parse().unwrap(),
+        ));
+    }
+    if result.contains('(') {
+        return rle_decode(&amp;result);
+    }
+    Ok(result)
+}
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="构建"><a class="header" href="#构建">构建</a></h1>
 <h2 id="从字符串构建单个关卡"><a class="header" href="#从字符串构建单个关卡">从字符串构建单个关卡</a></h2>
 <p>关卡解析可以分为两部分: 地图解析/元数据和注释解析.</p>
