--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/run_length_encoding.html"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> 求解器</div></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">4.</strong> 术语表</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/run_length_encoding.html"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="solver/index.html"><strong aria-hidden="true">3.</strong> 求解器</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">4.</strong> 术语表</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -877,6 +877,32 @@ for line in str.split(['\n', '|']) { ... SKIP ... }
 ###
 </code></pre>
 <p>这是一个最简单的非标准关卡, 因为其没有箱子和目标, 解为空.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="求解器"><a class="header" href="#求解器">求解器</a></h1>
+<p>顾名思义, 求解器是用于自动求解推箱子关卡的程序.</p>
+<p>寻路算法是在<strong>路径点</strong>组成的图中寻找一条从<strong>初始位置</strong>到<strong>最终位置</strong>的路径.
+求解器则是在<strong>状态</strong>组成的图中寻找一条从<strong>初始状态</strong>到<strong>最终状态</strong>的路径.</p>
+<p>本文将描述如何创建一个基于 A* 算法的求解器.</p>
+<h2 id="表示状态"><a class="header" href="#表示状态">表示状态</a></h2>
+<p>顾名思义, 状态用于表示关卡的状态.</p>
+<pre><code class="language-rs">pub struct State {
+    pub player_position: Vector2&lt;i32&gt;,
+    pub box_positions: HashSet&lt;Vector2&lt;i32&gt;&gt;,
+}
+</code></pre>
+<p>可以看出状态仅包含了玩家的位置和箱子的位置, 因为玩家和箱子是关卡中可移动对象. 保存它们的位置足以描述整个关卡的状态. 其他元素, 如墙壁/目标位置等是静态的，它们的位置不会改变, 因此只需要从关卡的初始状态中获取它们的位置.</p>
+<p>状态是图里的节点, 从初始状态开始探索其相邻的节点, 即<a href="https://en.wikipedia.org/wiki/Neighbourhood_(graph_theory)">邻域</a>.</p>
+<p>通过下面函数来生成当前状态的派生状态, 即相邻的状态:</p>
+<pre><code class="language-rs">impl State {
+    pub fn successors(&amp;self, solver: &amp;Solver) -&gt; Vec&lt;State&gt; {
+        // ... SKIP ...
+    }
+}
+</code></pre>
+<p>通过启发式算法优先探索最接近最终状态的节点.</p>
+<p>TODO</p>
+<h2 id="优化器"><a class="header" href="#优化器">优化器</a></h2>
+<p>对已知的路径进行本地搜索, 以寻找更佳的路径.</p>
+<p>TODO</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="术语表"><a class="header" href="#术语表">术语表</a></h1>
 <div class="table-wrapper"><table><thead><tr><th>中文</th><th>英文</th></tr></thead><tbody>
 <tr><td>求解器</td><td>solver</td></tr>
