--- a/solver/index.html
+++ b/solver/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>表示 - Sokoban Tutorial</title>
+        <title>求解器 - Sokoban Tutorial</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html" class="active"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/run_length_encoding.html"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html"><strong aria-hidden="true">3.</strong> 求解器</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">4.</strong> 术语表</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/run_length_encoding.html"><strong aria-hidden="true">1.2.</strong> 行程编码</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.3.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.4.</strong> 标准化</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html" class="active"><strong aria-hidden="true">3.</strong> 求解器</a></li><li class="chapter-item expanded "><a href="../glossary.html"><strong aria-hidden="true">4.</strong> 术语表</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -176,82 +176,42 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="表示"><a class="header" href="#表示">表示</a></h1>
-<h2 id="表示地图"><a class="header" href="#表示地图">表示地图</a></h2>
-<p>地图共包含 5 种元素, 这些元素可能在一个格子内叠加(比如玩家位于目标上).<br />
-最小的数据存储单元字节包含 8 个比特, 足以表示 5 种元素. 因此可以使用一个字节的空间来存储单个地图格子, 其中的每个比特表示一种地图元素.<br />
-创建用于表示地图元素的比特位:</p>
-<pre><code class="language-rs">use bitflags::bitflags;
-
-bitflags! {
-    pub struct Tiles: u8 {
-        const Floor = 1 &lt;&lt; 0;
-        const Wall = 1 &lt;&lt; 1;
-        const Box = 1 &lt;&lt; 2;
-        const Goal = 1 &lt;&lt; 3;
-        const Player = 1 &lt;&lt; 4;
+                        <h1 id="求解器"><a class="header" href="#求解器">求解器</a></h1>
+<p>顾名思义, 求解器是用于自动求解推箱子关卡的程序.</p>
+<p>寻路算法是在<strong>路径点</strong>组成的图中寻找一条从<strong>初始位置</strong>到<strong>最终位置</strong>的路径.
+求解器则是在<strong>状态</strong>组成的图中寻找一条从<strong>初始状态</strong>到<strong>最终状态</strong>的路径.</p>
+<p>本文将描述如何创建一个基于 A* 算法的求解器.</p>
+<h2 id="表示状态"><a class="header" href="#表示状态">表示状态</a></h2>
+<p>顾名思义, 状态用于表示关卡的状态.</p>
+<pre><code class="language-rs">pub struct State {
+    pub player_position: Vector2&lt;i32&gt;,
+    pub box_positions: HashSet&lt;Vector2&lt;i32&gt;&gt;,
+}
+</code></pre>
+<p>可以看出状态仅包含了玩家的位置和箱子的位置, 因为玩家和箱子是关卡中可移动对象. 保存它们的位置足以描述整个关卡的状态. 其他元素, 如墙壁/目标位置等是静态的，它们的位置不会改变, 因此只需要从关卡的初始状态中获取它们的位置.</p>
+<p>状态是图里的节点, 从初始状态开始探索其相邻的节点, 即<a href="https://en.wikipedia.org/wiki/Neighbourhood_(graph_theory)">邻域</a>.</p>
+<p>通过下面函数来生成当前状态的派生状态, 即相邻的状态:</p>
+<pre><code class="language-rs">impl State {
+    pub fn successors(&amp;self, solver: &amp;Solver) -&gt; Vec&lt;State&gt; {
+        // ... SKIP ...
     }
 }
 </code></pre>
-<p>使用一维数组来存储地图数据, 使用二维向量(数学)存储地图尺寸.</p>
-<pre><code class="language-rs">use nalgebra::Vector2;
-
-pub struct Map {
-    data: Vec&lt;Tiles&gt;,
-    dimensions: Vector2&lt;i32&gt;,
-    // ... SKIP ...
-}
-</code></pre>
-<p>使用一维数组而非二维数组是因为一维数组更平坦(flatten), 进行部分操作时更简单高效. 如:</p>
-<pre><code class="language-rs">impl Map {
-    pub fn with_dimensions(dimensions: Vector2&lt;i32&gt;) -&gt; Self {
-        Self {
-            data: vec![Tiles::empty(); (dimensions.x * dimensions.y) as usize],
-            dimensions,
-            // ... SKIP ...
-        }
-    }
-    // ... SKIP ...
-}
-</code></pre>
-<p>因为只需要操作一个数组(而非 n 个数组), 进行调整地图尺寸等操作的代码会更简单高效.
-而且能确保动态数组的元素是紧密排列的, 根据数据局部性原理, 读取数据的性能通常会更好.</p>
-<p>重载下标运算符, 以便后续直接通过二维坐标访问地图元素.</p>
-<pre><code class="language-rs">impl Index&lt;Vector2&lt;i32&gt;&gt; for Map {
-    type Output = Tiles;
-    fn index(&amp;self, position: Vector2&lt;i32&gt;) -&gt; &amp;Tiles {
-        &amp;self.data[(position.y * self.dimensions.x + position.x) as usize]
-    }
-}
-
-impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
-    fn index_mut(&amp;mut self, position: Vector2&lt;i32&gt;) -&gt; &amp;mut Tiles {
-        &amp;mut self.data[(position.y * self.dimensions.x + position.x) as usize]
-    }
-}
-</code></pre>
-<h2 id="表示关卡"><a class="header" href="#表示关卡">表示关卡</a></h2>
-<p>关卡数据可分为三个部分: 地图数据, 元数据和注释. 其中注释可以作为元数据.<br />
-元数据是一个键值对的集合, 因此可以使用 HashMap 来存储.
-可以使用下面的结构体存储关卡数据:</p>
-<pre><code class="language-rs">pub struct Level {
-    map: Map,
-    metadata: HashMap&lt;String, String&gt;,
-    // ... SKIP ...
-}
-</code></pre>
-<p>将地图从关卡中拆分是因为地图涉及大量的关联函数, 如果都放在 <code>Level</code> 里会导致其变得过于庞大.<br />
-为了提升代码的可读性和可维护性, 将相关代码拆分到 <code>Map</code> 中, 并将 <code>Level</code> 的 Deref 操作指向 <code>Map</code>. 并通过实现 <a href="https://doc.rust-lang.org/std/ops/trait.Deref.html">Deref trait</a>, 使得用户能够透明地引用到 <code>Level</code> 内部的 Map.</p>
+<p>通过启发式算法优先探索最接近最终状态的节点.</p>
+<p>TODO</p>
+<h2 id="优化器"><a class="header" href="#优化器">优化器</a></h2>
+<p>对已知的路径进行本地搜索, 以寻找更佳的路径.</p>
+<p>TODO</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../level/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../level/normalization.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../level/run_length_encoding.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../glossary.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -261,11 +221,11 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../level/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../level/normalization.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../level/run_length_encoding.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../glossary.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
